<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical"
    tools:context=".ProdutosActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtCodigo"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtNome"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPrecoVenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtPrecoVenda"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbProdutoAdicional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cbProdutoAdicional"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnAdicionar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="voltar"
        android:text="@string/btnVoltar" />

</LinearLayout>