<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/edtEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/edtSenha"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="abrirHome"
        android:padding="12dp"
        android:text="@string/btnEntrar" />

    <TextView
        android:id="@+id/tvCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="abrirSignUp"
        android:text="@string/tvCadastrar"
        android:textSize="16sp" />

</LinearLayout>