<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmpresaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRazaoSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtRazaoSocial"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNomeFantasia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtNomeFantasia"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCNPJ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtCNPJ"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtIE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtIE"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtEndereco"
                android:inputType="textPostalAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:columnCount="3"
            android:rowCount="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTipoContato"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/edtTipoContato"
                android:inputType="text"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtContato"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/edtContato"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@android:drawable/ic_input_add" />

        </GridLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdicionar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/btnAdicionar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVoltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:onClick="voltar"
            android:text="@string/btnVoltar" />

    </LinearLayout>
</ScrollView>